fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,78 +3,78 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Changa', sans-serif;
+  font-family: 'Changa', sans-serif;
 
-    background: url('./assets/main-bg.svg') center / cover;
+  background: url('./assets/main-bg.svg') center / cover;
 }
 
 .default-btn {
-    background: url('./assets/start-game-button-bg.png') center top / cover no-repeat;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 12px;
-    cursor: pointer;
-    color: white;
+  background: url('./assets/start-game-button-bg.png') center top / cover no-repeat;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 12px;
+  cursor: pointer;
+  color: white;
 }
 
 .max-height-80vh {
-    max-height: 75vh;
+  max-height: 75vh;
 }
 
 .main-blue-btn {
-    background: #2f3061;
+  background: #2f3061;
 }
 
 .mirror {
-    transform: scale(-1, 1);
+  transform: scale(-1, 1);
 }
 
 .main-page-bg {
-    background-image: url('./assets/home-bg.svg');
+  background-image: url('./assets/home-bg.svg');
 
-    /* Full height */
-    width: 100vw;
+  /* Full height */
+  width: 100vw;
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    transform: scale(2.4);
+  transform: scale(2.4);
 }
 
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .no-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .blur-modal-bg {
-    background: rgba(43, 46, 68, 0.5);
-    backdrop-filter: blur(15px);
+  background: rgba(43, 46, 68, 0.5);
+  backdrop-filter: blur(15px);
 }
 
 .modal-shadow {
-    box-shadow: 0 0 60px 0 rgba(32, 34, 53, 1);
+  box-shadow: 0 0 60px 0 rgba(32, 34, 53, 1);
 }
 
 @media screen and (max-height: 660px) {
-    .logo-wrapper {
-        min-height: calc(66vh - 88px) !important;
-    }
+  .logo-wrapper {
+    min-height: calc(66vh - 88px) !important;
+  }
 
-    .home-advice {
-        /*bottom: 25px !important;*/
-        /*line-height: 20px !important;*/
-        /*font-size: 14px !important;*/
-    }
+  .home-advice {
+    /*bottom: 25px !important;*/
+    /*line-height: 20px !important;*/
+    /*font-size: 14px !important;*/
+  }
 }
 
 .history-item:last-child {
-    border: none
+  border: none;
 }
